# BibAuto

./: .gitignore  LICENSE  README.md  promt.txt  pyproject.toml  requerimentos requirements.txt
src/: configs.json  geminiAPI.py  main.py
