[project]
name = "bibauto"
version = "0.1.0"
description = "Um app que automatiza a cadastração de livros no biblivre."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "EmoDescontente", email = "no" }
]
dependencies = [
    "flet>=0.82.2"
]

[dependency-groups]
dev = [
    "flet-cli>=0.82.2",
    "flet-desktop>=0.82.2",
    "flet-web>=0.82.2",
]

[tool.flet]
org = "com.mycompany"
product = "bibauto"
company = "Flet"
copyright = "Copyright (C) 2023-2026 by Flet"

[tool.flet.app]
path = "src"
